chore: put back deps